--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -2138,36 +2138,37 @@ $course-envelop-color: #fff;
   .course-tabs {
     border: 0 solid silver;
     border-width: 0px 0px 0px 0px;
-    margin-left: 1em;
     text-align:center;
     position: absolute;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    width: 80%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.7);
 
     .tab-title {
       border: 0 solid silver;
       border-width: 0 0 0px 0px;
-      background: #DEDEDE;
-      border-radius: 10px 10px 0px 0px;
+      background: transparent;
       margin-right: 0.4em;
       float: none !important;
       display: inline-block;
+      border-bottom: 5px solid transparent;
 
       a {
-        color: #2B91EA;
-        border-radius: inherit;
-        margin: 0px 4px;
+        color: #000;
+        font-weight: 600;
         font-size: 15px;
         letter-spacing: -0.3px;
+        padding: 0.5rem 0.8rem 0.4rem;
       }
 
       &.active {
         border-width: 0px 0px 0px 0px;
         background: #FFFFFF;
+        border-bottom: 5px solid #2b78e4;
         a {
-          color: #000;
+          color: #2B78E4;
         }
       }
 
@@ -2231,7 +2232,8 @@ $course-envelop-color: #fff;
 }
 
 #envelop-content{
-  margin-top: 20px;
+  background-color: #fff;
+  padding: 10px;
   /* For accordian in the mobile view*/
 
   .accordion {
@@ -2257,8 +2259,176 @@ $course-envelop-color: #fff;
   .course-book {
 
     #course-about {
+      .course-overview >.columns {
+        padding: 0px 10px;
+      }
+      h5 {
+        text-transform: uppercase;
+      }
+      .correct-count {
+        color: #367714;
+      }
+      .incorrect-count {
+        color: #9b0000;
+      }
+      .course-metric-heading {
+        text-transform: uppercase;
+        font-size: 12px;
+        letter-spacing: 0.9px;
+        font-weight: 600;
+        color: #8E8E8E;
+        display: block;
+      }
+      .course-metric-count {
+        font-size: 30px;
+        font-weight: 500;
+        letter-spacing: 0.5px;
+        display: block;
+      }
+      .ongoing-session {
+        border-bottom: 1px solid #ccc;
+        margin-bottom: 12px;
+        padding-bottom: 15px;
 
-      .about-course-heading {
+        h5,h3 {
+          color: #2b78e4;
+        }
+        button {
+          font-size: 14px;
+          padding: 7px;
+          margin: 0px;
+          background-color: #2B78E4;
+        }
+      }
+      .course-status {
+        >h5 {
+          color: #888;
+        }
+        >.row {
+          margin: 10px 0px;
+        }
+        .tabs {
+          width: 100%;
+          margin: 0em 0em 0.5em;
+          border-bottom: 1px solid #CCC;
+
+          .tab-title {
+            width: 40%;
+            background-color: #DEDEDE;
+            margin-left: 1em;
+            position: relative;
+            top: 1px;
+            text-transform: uppercase;
+
+            &.active {
+              background-color: #fff;
+              border: 1px solid #CCC;
+              border-bottom: 0px;
+            }
+          }
+        }
+      }
+      .course-section {
+        border: 1px solid #ccc;
+        padding: 10px;
+        box-shadow: 1px 1px 1px rgba(0, 0, 0,0.5);
+        margin: 40px 0px;
+        position: relative;
+
+        >.row {
+          margin: 20px 0px;
+        }
+
+        .course-section-heading {
+          text-transform: uppercase;
+          font-weight: 600;
+          letter-spacing: 1.5px;
+          font-size: 14px;
+          display: block;
+          margin: 2px 0px 15px;
+          color: #888;
+        }
+
+        .course-section-icon {
+          position: absolute;
+          font-size: 40px;
+          top: -35px;
+          right: 5px;
+          color: #aaa;
+          background: #fff;
+        }
+      }
+      .course-points-breakup {
+
+      }
+      .course-interactions {
+
+      }
+      .course-gallery-uploads {
+
+      }
+      .course-quiz-perf {
+
+      }
+      .course-notes{
+
+      }
+      .course-warning{
+        background-color: #fffdd7;
+        >h5 {
+          color: #c09100;
+        }
+        i {
+          padding: 10px;
+          margin-right: 5px;
+          color: #c09100;
+        }
+        a {
+          text-decoration: underline;
+        }
+      }
+      .course-students-data {
+        margin: 20px 0px;
+
+        .students-table-legends {
+          >span:nth-child(odd) {
+            margin: 0px 10px;
+          }
+          >span:nth-child(even) {
+            display: inline-block;
+            vertical-align: top;
+            margin-right: 10px;
+          }
+        }
+      }
+      .student-overview-table {
+        width: 100%;
+        margin: 15px 0px;
+
+        tr {
+          border: 1px solid #ccc;
+        }
+      }
+      .about-course {
+        border: 1px solid #666;
+        padding: 10px;
+        >h5 {
+          text-transform: uppercase;
+          font-weight: 600;
+          letter-spacing: 1.5px;
+          font-size: 14px;
+          display: block;
+          margin: 2px 0px 15px;
+          color: #888;
+        }
+        .course-highlight {
+          color: #aaa;
+          font-weight: 600;
+          font-size: 20px;
+          margin-bottom: 5px;
+        }
+      }
+      /*.about-course-heading {
         display: block;
         height: 300px;
         width: 100%;
@@ -2289,7 +2459,7 @@ $course-envelop-color: #fff;
         display: block;
         min-height: 100px;
         width: 100%;
-      }
+      }*/
     }
   }
 }
