changes display rts widget and a dict of name and altnames

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/type_created.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/type_created.html
@@ -23,6 +23,7 @@
     </div>
     <div style="display:table-cell;"> 
         <select id="select_gs" name="widget_for" class="demo-default" placeholder=" Select GST " onchange="GetSelectedTextValue(this)" >
+                <option value="search" > </option> 
             {% for list in opt_list %}
                 <option value="{{list.name}}" size="5" > {{list.name}} </option>
             {% endfor %}
